# video-maker-mitk

./: CMakeLists.txt  QmitkFFmpegWriter2.cpp  QmitkFFmpegWriter2.h  README.md  VideoMaker.cpp  VideoMaker.h  VideoMakerMain.cpp
modules/MovieMaker/: CMakeLists.txt  QmitkAnimationItem.h  QmitkMovieMakerView.cpp  QmitkOrbitAnimationItem.cpp  QmitkOrbitAnimationItem.h
scripts/: record_video.sh
